--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
     "motion": "^12.4.7",
     "react": "^19.0.0",
